--- a/x-pack/plugins/search_connectors/kibana.jsonc
+++ b/x-pack/plugins/search_connectors/kibana.jsonc
@@ -17,8 +17,10 @@
       "search",
       "connectors"
     ],
-    "requiredPlugins": [],
-    "optionalPlugins": [],
-    "requiredBundles": []
+    "requiredPlugins": [
+      "taskManager",
+      "fleet"
+    ],
+    "optionalPlugins": []
   }
 }
